# misp-stix

./: .gitignore  .gitmodules  LICENSE  README.md  index.md  misp_stix_converter.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-form.yml  feature-request-form.yml  support-form.yml
.github/workflows/: misp-stix.yml  python-package.yml
documentation/: README.md  external_stix20_to_misp_attributes.md  external_stix20_to_misp_galaxies.md  external_stix20_to_misp_objects.md  external_stix21_to_misp_attributes.md  external_stix21_to_misp_galaxies.md  external_stix21_to_misp_objects.md  generate_documentation.py  misp_attributes_to_stix1.md  misp_attributes_to_stix20.md  misp_attributes_to_stix21.md  misp_events_to_stix1.md  misp_events_to_stix20.md  misp_events_to_stix21.md  misp_galaxies_to_stix1.md  misp_galaxies_to_stix20.md  misp_galaxies_to_stix21.md  misp_objects_to_stix1.md  misp_objects_to_stix20.md  misp_objects_to_stix21.md  stix20_to_misp_attributes.md  stix20_to_misp_galaxies.md  stix20_to_misp_objects.md  stix21_to_misp_attributes.md  stix21_to_misp_galaxies.md  stix21_to_misp_objects.md
documentation/content/: attributes_from_external_stix20_details.md  attributes_from_external_stix21_details.md  attributes_from_stix20_details.md  attributes_from_stix21_details.md  attributes_to_stix1_details.md  attributes_to_stix20_details.md  attributes_to_stix21_details.md  galaxies_from_external_stix20_details.md  galaxies_from_external_stix21_details.md  galaxies_from_stix20_details.md  galaxies_from_stix21_details.md  galaxies_to_stix1_details.md  galaxies_to_stix20_details.md  galaxies_to_stix21_details.md  introduction.md  misp_to_stix1.md  misp_to_stix20.md  misp_to_stix21.md  misp_to_stix_intro.md  objects_from_external_stix20_details.md  objects_from_external_stix21_details.md  objects_from_stix20_details.md  objects_from_stix21_details.md  objects_to_stix1_details.md  objects_to_stix20_details.md  objects_to_stix21_details.md  stix20_to_misp.md  stix21_to_misp.md  stix_to_misp_intro.md
documentation/mapping/: external_stix20_to_misp_attributes.json  external_stix20_to_misp_attributes_summary.json  external_stix20_to_misp_galaxies.json  external_stix20_to_misp_galaxies_summary.json  external_stix20_to_misp_objects.json  external_stix20_to_misp_objects_summary.json  external_stix21_to_misp_attributes.json  external_stix21_to_misp_attributes_summary.json  external_stix21_to_misp_galaxies.json  external_stix21_to_misp_galaxies_summary.json  external_stix21_to_misp_objects.json  external_stix21_to_misp_objects_summary.json  misp_attributes_to_stix1.json  misp_attributes_to_stix20.json  misp_attributes_to_stix20_summary.json  misp_attributes_to_stix21.json  misp_attributes_to_stix21_summary.json  misp_custom_attributes_to_stix1.json  misp_custom_attributes_to_stix20.json  misp_custom_attributes_to_stix21.json  (+24 more)
export/: framing.py  misp_to_stix1.py  stix1_export.py  stix1_mapping.py  stix1_package_generator.py
import/: importparser.py
misp_stix_converter/: __init__.py  abstract.py  misp_stix_converter.py  misp_stix_mapping.py
tests/: _test_stix.py  _test_stix2_export.py  _test_stix_export.py  _test_stix_import.py  test_attributes_collection_1.json  test_attributes_collection_2.json  test_attributes_collection_stix11.xml  test_attributes_collection_stix12.xml  test_attributes_collection_stix20.json  test_attributes_collection_stix21.json  test_event1_stix11.xml  test_event1_stix12.xml  test_event1_stix20.json  test_event1_stix21.json  test_event2_stix11.xml  test_event2_stix12.xml  test_event2_stix20.json  test_event2_stix21.json  test_event_stix11.xml  test_event_stix12.xml  test_event_stix20.json  test_event_stix21.json  test_events.py  test_events_collection.xml  test_events_collection_1.json  test_events_collection_2.json  test_events_collection_stix11.xml  test_events_collection_stix12.xml  test_events_collection_stix20.json  test_events_collection_stix21.json  test_external_stix20_bundles.py  test_external_stix20_import.py  test_external_stix21_bundles.py  test_external_stix21_import.py  test_internal_stix20_bundles.py  test_internal_stix20_import.py  test_internal_stix21_bundles.py  test_internal_stix21_import.py  test_internal_stix2_import.py  test_objects_collection_1.json  (+11 more)
tools/: build_cti_uuid_catalog.py  update_galaxy_definitions.py
(+80 files in other folders)
