[tool.poetry]
name = "misp_stix_converter"
version = "2.4.160"
description = "Python scripts used by MISP to export MISP format into STIX and to import STIX into MISP format."
authors = ["Christian Studer <christian.studer@circl.lu>"]
maintainers = ["Christian Studer <christian.studer@circl.lu>"]
license = "BSD-3-Clause"
repository = "https://github.com/MISP/misp-stix"
documentation = "https://misp.github.io/misp-stix/"
readme = "README.md"

[tool.poetry.scripts]
misp_stix_converter = 'misp_stix_converter:main'

[tool.poetry.dependencies]
python = "^3.7"
pymisp = "^2.4.157"
stix = "^1.2.0"
cybox = "^2.1.0"
mixbox = "^1.0.3"
maec = "^4.1.0"
stix2 = {git = "https://github.com/MISP/cti-python-stix2.git", rev = "main"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^7.1.2"

[build-system]
requires = ["poetry>=0.12", "setuptools>=65.1.1"]
build-backend = "poetry.masonry.api"
